--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -184,7 +184,10 @@
     container.appendChild(cardElement);
 
     // Marcar o cartão como visualizado
-    viewedCards.add(index);
+    if (!viewedCards.has(index)) {
+        console.log(`Card ${index + 1} marked as viewed.`);
+        viewedCards.add(index);
+    }
     checkCompletion();
 
     // Atualiza botões de navegação
@@ -470,6 +473,10 @@ function speakText(text, voice, buttonElement, index) {
 }
 
 function checkCompletion() {
+    console.log("Checking completion...");
+    console.log(`Viewed cards: ${viewedCards.size}/${cardsData.length}`);
+    console.log(`Spoken cards: ${spokenCards.size}/${cardsData.length}`);
+
     if (viewedCards.size === cardsData.length && spokenCards.size === cardsData.length) {
         if (!phaseCompleted) {
             phaseCompleted = true;
