--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -444,16 +444,25 @@ async function checkPhaseProgress(uid, level, unit) {
                 voices = window.speechSynthesis.getVoices();
                 usVoice = voices.find(voice => voice.lang === 'en-US');
 
+                if (!usVoice) {
+                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice of your synthesizer will be used, which may cause problems with reading.");
+                }
+
                 if (usVoice) {
                     speakText(text, usVoice, buttonElement, index);
                 } else {
                     speakText(text, voices[0], buttonElement, index);
                 }
             };
-        } else if (usVoice) {
-            speakText(text, usVoice, buttonElement, index);
         } else {
-            speakText(text, voices[0], buttonElement, index);
+            if (!usVoice) {
+                alert("No 'en-US' voice found. Using default voice instead.");
+            }
+            if (usVoice) {
+                speakText(text, usVoice, buttonElement, index);
+            } else {
+                speakText(text, voices[0], buttonElement, index);
+            }
         }
         buttonElement.src = 'pause.png';
     }
