--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -35,6 +35,7 @@
         let showText = false; // Variável para alternar entre imagem e texto
         let viewedCards = new Set(); // Rastreador de cartões visualizados
         let spokenCards = new Set(); // Rastreador de cartões ouvidos
+        let alertDisplayed = false;
 
         // Função para verificar o role e exibir o botão PDF se o usuário for "professor" ou "proprietário"
         function checkUserRole() {
@@ -444,8 +445,9 @@ async function checkPhaseProgress(uid, level, unit) {
                 voices = window.speechSynthesis.getVoices();
                 usVoice = voices.find(voice => voice.lang === 'en-US');
 
-                if (!usVoice) {
-                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice of your synthesizer will be used, which may cause problems with reading.");
+                if (!usVoice && !alertDisplayed) {
+                    alert("No 'en-US' voice found. Using default voice instead.");
+                    alertDisplayed = true; // Marca o alerta como exibido
                 }
 
                 if (usVoice) {
@@ -455,8 +457,9 @@ async function checkPhaseProgress(uid, level, unit) {
                 }
             };
         } else {
-            if (!usVoice) {
+            if (!usVoice && !alertDisplayed) {
                 alert("No 'en-US' voice found. Using default voice instead.");
+                alertDisplayed = true; // Marca o alerta como exibido
             }
             if (usVoice) {
                 speakText(text, usVoice, buttonElement, index);
