--- a/Atividades/StoryCards/index.html
+++ b/Atividades/StoryCards/index.html
@@ -446,7 +446,7 @@ async function checkPhaseProgress(uid, level, unit) {
                 usVoice = voices.find(voice => voice.lang === 'en-US');
 
                 if (!usVoice && !alertDisplayed) {
-                    alert("No 'en-US' voice found. Using default voice instead.");
+                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice of your synthesizer will be used, which may cause problems with reading.");
                     alertDisplayed = true; // Marca o alerta como exibido
                 }
 
