--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -197,7 +197,8 @@
     let viewedQuestions = new Set();
 
     async function loadQuestions() {
-        const response = await fetch('../../DataQuiz/questions.txt');
+        const { level, unit } = getLevelAndUnitFromURL();
+        const response = await fetch(`../../${level}/${unit}/DataQuiz/questions.txt`);
         const text = await response.text();
         const lines = text.split('\n');
         let currentQuestion = null;
