--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -198,7 +198,14 @@
 
     async function loadQuestions() {
         const { level, unit } = getLevelAndUnitFromURL();
-        const response = await fetch(`../../${level}/${unit}/DataQuiz/questions.txt`);
+        const path = `../../${level}/${unit}/DataQuiz/questions.txt`;
+        console.log(`Fetching questions from: ${path}`);
+
+        const response = await fetch(path);
+        if (!response.ok) {
+            console.error(`Failed to fetch questions: ${response.status} - ${response.statusText}`);
+            return;
+        }
         const text = await response.text();
         const lines = text.split('\n');
         let currentQuestion = null;
