--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -241,6 +241,15 @@
             label.innerHTML = `<input type="radio" name="question" value="${answer[0]}"> ${answer}`;
             container.appendChild(label);
         });
+
+        updateNavigationButtons();
+    }
+
+        q.answers.forEach(answer => {
+            const label = document.createElement('label');
+            label.innerHTML = `<input type="radio" name="question" value="${answer[0]}"> ${answer}`;
+            container.appendChild(label);
+        });
     }
 
     function readQuestion() {
@@ -295,6 +304,25 @@
         const unit = params.get('unit');
         return { level, unit };
     };
+
+    function updateNavigationButtons() {
+        document.getElementById('prev-btn').disabled = currentQuestionIndex === 0;
+        document.getElementById('next-btn').disabled = currentQuestionIndex === questions.length - 1;
+    }
+
+    function showPreviousQuestion() {
+        if (currentQuestionIndex > 0) {
+            currentQuestionIndex--;
+            displayQuestion();
+        }
+    }
+
+    function showNextQuestion() {
+        if (currentQuestionIndex < questions.length - 1) {
+            currentQuestionIndex++;
+            displayQuestion();
+        }
+    }
 
     window.onload = loadQuestions;
 </script>
