--- a/Atividades/QUIZ/index.html
+++ b/Atividades/QUIZ/index.html
@@ -236,11 +236,7 @@
         questionText.textContent = `${currentQuestionIndex + 1}. ${q.question}`;
         container.appendChild(questionText);
 
-        q.answers.forEach(answer => {
-            const label = document.createElement('label');
-            label.innerHTML = `<input type="radio" name="question" value="${answer[0]}"> ${answer}`;
-            container.appendChild(label);
-        });
+        
 
         q.answers.forEach(answer => {
             const label = document.createElement('label');
@@ -282,7 +278,9 @@
 
     document.getElementById('backButton').addEventListener('click', () => {
         const { level, unit } = getLevelAndUnitFromURL();
-        const dbRef = firebase.database().ref(`usuarios/progresso/${level}/${unit}/fase2`);
+        const { fase } = getFaseFromURL();
+        const nextFase = `fase${parseInt(fase) + 1}`;
+        const dbRef = firebase.database().ref(`usuarios/progresso/${level}/${unit}/${nextFase}`);
 
         dbRef.once('value').then(snapshot => {
             if (snapshot.val()) {
@@ -294,12 +292,19 @@
             }
         });
     });
+    });
 
     function getLevelAndUnitFromURL() {
         const params = new URLSearchParams(window.location.search);
         const level = params.get('level');
         const unit = params.get('unit');
         return { level, unit };
+    }
+
+    function getFaseFromURL() {
+        const params = new URLSearchParams(window.location.search);
+        return { fase: params.get('fase') };
+    };
     };
 
     function updateNavigationButtons() {
